--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             background-color: #000;
         }
         #robot-eyes {
-          margin-top: 33%;
+          margin-top: 30vh;
             width: 300px;
             height: 150px;
         }
