--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,12 @@ button {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 <script>
+
+function checkExpression() {
+    $.get('/get_expression', function(data) {
+        $('#robot-eyes').attr('data', "/svg/" + data);
+    });
+}
 function checkSpeech() {
     var synth = window.speechSynthesis;
     var voices = synth.getVoices();
@@ -59,6 +65,8 @@ function checkSpeech() {
         }
     });
 }
+
+setInterval(checkExpression, 5000);
 
 // Only start checking for speech after user interaction
 document.getElementById('enable-speech').addEventListener('click', function() {
